# MpMatrix

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  run.sh
doc/: goals.md
modules/: FindGMP.cmake
src/: cholesky.cpp  demo.hpp  eigen.hpp  fixedmpz.hpp  main.cpp  moment_algorithm.hpp  mpm_algorithm.hpp  mpmatrix.hpp  mpmatrix_algorithm.hpp  prettymp.hpp
